# Gen-AI

./: NB_01_Gemma_270m_huggingface_prompt.ipynb  agents.ipynb  movielens_bandit_pytorch.ipynb
DL_Agentic_graph/: file_suggestion.ipynb  intro_to_adk_1.ipynb  intro_to_adk_2.ipynb  kg_construction_1.ipynb  kg_construction_2.ipynb  neo4j_for_adk.py  requirements (1).txt  schema_proposal_structured.ipynb  schema_proposal_unstructured.ipynb  tools.py  user_intent.ipynb
DL_Agents with Crew AI/: L5.ipynb
DL_DSPy/: Lesson_2.ipynb  Lesson_3.ipynb  Lesson_4.ipynb  requirements.txt
DL_HuggingFace_OpenSourceModels/: L11_image_captioning.ipynb  L14_deployment.ipynb  L2_NLP.ipynb  L3_Translation_and_Summarization.ipynb  L4_Sentence_Embeddings.ipynb  L5_Zero-Shot_Audio_Classification.ipynb  L7_Text_to_Speech.ipynb  L8_object_detection.ipynb
DL_LLM-post-training/: Lesson_3.ipynb  Lesson_5.ipynb  Lesson_7.ipynb
DL_LangChain_data/: 01_document_loading.ipynb
DL_Llama4/: L2_Student.ipynb  L3_Student.ipynb  L4_Student.ipynb  L5_Student.ipynb  L6_Student.ipynb  L7_Student.ipynb
DL_Pydantic/: lesson_2.ipynb  lesson_3.ipynb  lesson_4.ipynb  lesson_5.ipynb
DL_openai o1/: L3.ipynb  L4.ipynb  L5.ipynb  L6.ipynb
dspy_gepa_optimization-main/: .gitignore  README.md  convert_pdfs_to_md.py  multi-agent-system.py  pyproject.toml
dspy_gepa_optimization-main/docs/: copd1.md  copd2.md  diabets1.md  diabets2.md  qa_pairs_copd.json  qa_pairs_diabets.json  qa_pairs_joint.json
kaggle_notebooks/: 01-agentic-continuum.ipynb  02-tool-use-function-calling-demo.ipynb  RAG_retrieval.ipynb  (+9 more)
(+18 files in other folders)
